--- a/trunk/Skeleton/makefile
+++ b/trunk/Skeleton/makefile
@@ -7,14 +7,14 @@
 ## Application Specific Settings ---------------------------------------------
 
 # specify the name of the binary
-NAME= TimeManipulaton.so
+NAME= TestApp
 
 # specify the type of binary
 #	APP:	Application
 #	SHARED:	Shared library or add-on
 #	STATIC:	Static library archive
 #	DRIVER: Kernel Driver
-TYPE= SHARED
+TYPE= APP
 
 #	specify the source files to use
 #	full paths or paths relative to the makefile can be included
@@ -24,8 +24,10 @@ TYPE= SHARED
 #	if two source files with the same name (source.c or source.cpp)
 #	are included from different directories.  Also note that spaces
 #	in folder names do not work well with this makefile.
-SRCS= 	TimeRepresentation.cpp \
-		CalendarModule.cpp
+SRCS= 	clsApp.cpp \
+		clsMainWindow.cpp \
+		IconListItem.cpp \
+		main.cpp 
 		
 #	specify the resource files to use
 #	full path or a relative path to the resource file can be used.
@@ -41,8 +43,11 @@ RSRCS=
 #		naming scheme you need to specify the path to the library
 #		and it's name
 #		library: my_lib.a entry: my_lib.a or path/my_lib.a
-LIBS= be	\
-	   stdc++.r4
+LIBS= 	be \
+		stdc++	\
+		TimeRepresentation \
+		CalendarModule \
+		CalendarControl
 		
 #	specify additional paths to directories following the standard
 #	libXXX.so or libXXX.a naming scheme.  You can specify full paths
@@ -50,7 +55,8 @@ LIBS= be	\
 #	be recursive, so include all of the paths where libraries can
 #	be found.  Directories where source files are found are
 #	automatically included.
-LIBPATHS= 
+LIBPATHS= lib \
+		./lib
 
 #	additional paths to look for system headers
 #	thes use the form: #include <header>
@@ -60,7 +66,9 @@ SYSTEM_INCLUDE_PATHS =
 #	additional paths to look for local headers
 #	thes use the form: #include "header"
 #	source file directories are automatically included
-LOCAL_INCLUDE_PATHS = 
+LOCAL_INCLUDE_PATHS = ../CalendarControl	\
+		../TimeRepresentation	\
+		../CalendarModule
 
 #	specify the level of optimization that you desire
 #	NONE, SOME, FULL
@@ -80,12 +88,12 @@ WARNINGS = ALL
 #	specify whether image symbols will be created
 #	so that stack crawls in the debugger are meaningful
 #	if TRUE symbols will be created
-SYMBOLS = 
+SYMBOLS = TRUE
 
 #	specify debug settings
 #	if TRUE will allow application to be run from
 #	a source-level debugger
-DEBUGGER = 
+DEBUGGER = TRUE
 
 #	specify additional compiler flags for all files
 COMPILER_FLAGS =
