Update of preferences

--- a/trunk/PreferencesPreflet/makefile
+++ b/trunk/PreferencesPreflet/makefile
@@ -7,7 +7,7 @@
 ## Application Specific Settings ---------------------------------------------
 
 # specify the name of the binary
-NAME= Eventual Preferences
+NAME= Eventual\ Preferences
 
 # specify the type of binary
 #	APP:	Application
@@ -24,7 +24,10 @@ TYPE= APP
 #	if two source files with the same name (source.c or source.cpp)
 #	are included from different directories.  Also note that spaces
 #	in folder names do not work well with this makefile.
-SRCS= 	PreferencesPreflet.cpp
+SRCS= 	PreferencesPrefletApp.cpp \
+		PreferencesPrefletMainWindow.cpp \
+		CategoryPreferencesView.cpp
+		
 		
 #	specify the resource files to use
 #	full path or a relative path to the resource file can be used.
@@ -42,7 +45,11 @@ RSRCS=
 #		library: my_lib.a entry: my_lib.a or path/my_lib.a
 LIBS= 	be		\
 	   	stdc++	\
-	   	../PreferencesMessage/libPreferencesMessage.so
+	   	Utilities	\
+	   	CalendarModule	\
+	   	TimeRepresentation	\
+	   	CategoryItem	\
+	   	Utilities
 		
 #	specify additional paths to directories following the standard
 #	libXXX.so or libXXX.a naming scheme.  You can specify full paths
@@ -50,7 +57,7 @@ LIBS= 	be		\
 #	be recursive, so include all of the paths where libraries can
 #	be found.  Directories where source files are found are
 #	automatically included.
-LIBPATHS= 
+LIBPATHS= ../lib
 
 #	additional paths to look for system headers
 #	thes use the form: #include <header>
@@ -60,7 +67,10 @@ SYSTEM_INCLUDE_PATHS =
 #	additional paths to look for local headers
 #	thes use the form: #include "header"
 #	source file directories are automatically included
-LOCAL_INCLUDE_PATHS = ../PreferencesMessage
+LOCAL_INCLUDE_PATHS = ../CalendarModule		\
+	../Utilities	\
+	../TimeRepresentation	\
+	../CategoryItem
 
 #	specify the level of optimization that you desire
 #	NONE, SOME, FULL
@@ -80,12 +90,12 @@ WARNINGS = ALL
 #	specify whether image symbols will be created
 #	so that stack crawls in the debugger are meaningful
 #	if TRUE symbols will be created
-SYMBOLS = 
+SYMBOLS = TRUE
 
 #	specify debug settings
 #	if TRUE will allow application to be run from
 #	a source-level debugger
-DEBUGGER = 
+DEBUGGER = TRUE
 
 #	specify additional compiler flags for all files
 COMPILER_FLAGS =
@@ -97,3 +107,5 @@ LINKER_FLAGS =
 ## include the makefile-engine
 include /boot/develop/etc/makefile-engine
 
+copy:
+	cp "objects.x86-gcc4-debug/Eventual Preferences" .
