Preferences classes; new Utilities

--- a/trunk/CategoryList/makefile
+++ b/trunk/CategoryList/makefile
@@ -43,7 +43,9 @@ RSRCS=
 #		naming scheme you need to specify the path to the library
 #		and it's name
 #		library: my_lib.a entry: my_lib.a or path/my_lib.a
-LIBS= be
+LIBS= be	\
+	   stdc++	\
+	   CategoryItem
 		
 #	specify additional paths to directories following the standard
 #	libXXX.so or libXXX.a naming scheme.  You can specify full paths
@@ -51,7 +53,7 @@ LIBS= be
 #	be recursive, so include all of the paths where libraries can
 #	be found.  Directories where source files are found are
 #	automatically included.
-LIBPATHS= 
+LIBPATHS= ./lib
 
 #	additional paths to look for system headers
 #	thes use the form: #include <header>
@@ -61,7 +63,7 @@ SYSTEM_INCLUDE_PATHS =
 #	additional paths to look for local headers
 #	thes use the form: #include "header"
 #	source file directories are automatically included
-LOCAL_INCLUDE_PATHS = 
+LOCAL_INCLUDE_PATHS = ../CategoryItem
 
 #	specify the level of optimization that you desire
 #	NONE, SOME, FULL
@@ -86,7 +88,7 @@ SYMBOLS =
 #	specify debug settings
 #	if TRUE will allow application to be run from
 #	a source-level debugger
-DEBUGGER = 
+DEBUGGER = TRUE
 
 #	specify additional compiler flags for all files
 COMPILER_FLAGS =
@@ -98,3 +100,5 @@ LINKER_FLAGS =
 ## include the makefile-engine
 include /boot/develop/etc/makefile-engine
 
+copy:
+	cp objects.x86-gcc4-debug/TestApp .
