Additions to Preflet

--- a/trunk/PreferencesPreflet/makefile
+++ b/trunk/PreferencesPreflet/makefile
@@ -37,7 +37,8 @@ SRCS= 	PreferencesPrefletApp.cpp \
 #	specify the resource files to use
 #	full path or a relative path to the resource file can be used.
 RSRCS= Resources.rsrc	\
-		UniversityLogo.rsrc
+		UniversityLogo.rsrc	\
+		EventFileIcon.rsrc
 
 #	specify additional libraries to link against
 #	there are two acceptable forms of library specifications
