--- a/trunk/Utilities/makefile
+++ b/trunk/Utilities/makefile
@@ -56,7 +56,8 @@ RSRCS=
 #		naming scheme you need to specify the path to the library
 #		and it's name
 #		library: my_lib.a entry: my_lib.a or path/my_lib.a
-LIBS= 
+LIBS= 	CalendarModule	\
+		TimeRepresentation
 
 #	specify additional paths to directories following the standard
 #	libXXX.so or libXXX.a naming scheme.  You can specify full paths
@@ -64,7 +65,7 @@ LIBS=
 #	be recursive, so include all of the paths where libraries can
 #	be found.  Directories where source files are found are
 #	automatically included.
-LIBPATHS= 
+LIBPATHS= 	../lib
 
 #	additional paths to look for system headers
 #	thes use the form: #include <header>
@@ -74,7 +75,8 @@ SYSTEM_INCLUDE_PATHS =
 #	additional paths to look for local headers
 #	thes use the form: #include "header"
 #	source file directories are automatically included
-LOCAL_INCLUDE_PATHS = 
+LOCAL_INCLUDE_PATHS = 	../CalendarModule	\
+						../TimeRepresentation
 
 #	specify the level of optimization that you desire
 #	NONE, SOME, FULL
