--- a/trunk/PreferencesPreflet/makefile
+++ b/trunk/PreferencesPreflet/makefile
@@ -38,7 +38,8 @@ SRCS= 	PreferencesPrefletApp.cpp \
 #	full path or a relative path to the resource file can be used.
 RSRCS= Resources.rsrc	\
 		UniversityLogo.rsrc	\
-		EventFileIcon.rsrc
+		EventFileIcon.rsrc	\
+		EventualPreferencesIcon.rsrc
 
 #	specify additional libraries to link against
 #	there are two acceptable forms of library specifications
